--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -66,6 +66,15 @@
     margin-top: 2.4rem;
 }
 
+#page-give-classes .input-block.delete {
+    text-align: center;
+}
+
+#page-give-classes .input-block.delete img {
+    height: 2.6rem;
+    cursor: pointer;
+}
+
 #page-give-classes main footer {
     padding: 4rem 2.4rem;
 
@@ -132,15 +141,24 @@
         padding: 0 64px;
     }
 
-    .schedule-item {
+    #page-give-classes .schedule-item {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         column-gap: 1.6rem;
     }
 
+    #page-give-classes .schedule-item + .schedule-item {
+        grid-template-columns: 2fr 1fr 1fr 0px;
+    }
+
     #page-give-classes #schedule-items .select-block+.input-block,
     #page-give-classes #schedule-items .input-block+.input-block {
         margin-top: 0;
+    }
+
+    #page-give-classes .schedule-item .input-block.delete {
+        align-self: flex-end;
+        margin: .8rem 0;
     }
 
     #page-give-classes main footer {
